--- a/assets/scss/partials/_contact.scss
+++ b/assets/scss/partials/_contact.scss
@@ -176,14 +176,14 @@ section#contact {
                 }
 
                 .yt {
-                    background-color: #FF0000;
+                    background-color: #2678c5;
                     border-radius: 50%;
                     height: 2.864rem;
                     width: 2.864rem;
 
                     &:hover {
                         background-color: var(--color-white);
-                        color: #FF0000;
+                        color: #2678c5;
                     }
                 }
 
