--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -40,201 +40,6 @@ body {
   background-color: var(--color-dark);
 }
 
-footer {
-  background: var(--color-dark);
-}
-
-.footer {
-  width: 100%;
-}
-
-.footer .join h2 {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 3rem;
-  line-height: 4.5rem;
-}
-
-.footer hr {
-  border: 3px solid rgba(242, 242, 242, 0.25);
-}
-
-.footer .text-span span {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 2.25rem;
-  line-height: 3.375rem;
-  letter-spacing: 0.05em;
-  text-transform: capitalize;
-  color: var(--color-white);
-}
-
-.footer .email-button {
-  width: 6.25rem;
-  height: 6.25rem;
-  cursor: pointer;
-  padding-bottom: .8rem;
-  margin-left: -0.188rem;
-  background: var(--color-primary-dark);
-  border: none;
-  font-weight: lighter;
-  border-radius: 0.313rem;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-
-.footer .email-button:hover {
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  background: #12461a;
-}
-
-.footer .email-button::after {
-  content: ' \2192';
-  font-size: 2.73rem;
-}
-
-.footer .input input {
-  color: var(--color-dark);
-  padding-left: 1.875rem;
-  width: 15.625rem;
-  height: 3.125rem;
-  border: none;
-  border-radius: 0.313rem;
-  width: 40%;
-  height: 6.25rem;
-  background: var(--color-primary-light);
-  -webkit-box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  color: rgba(11, 29, 36, 0.75);
-  font-style: normal;
-  font-weight: 600;
-  font-size: 1.5rem;
-  line-height: 2.25rem;
-  letter-spacing: 0.05em;
-  text-transform: capitalize;
-}
-
-.footer .input input::-webkit-input-placeholder {
-  color: white !important;
-}
-
-.footer .input input:-ms-input-placeholder {
-  color: white !important;
-}
-
-.footer .input input::-ms-input-placeholder {
-  color: white !important;
-}
-
-.footer .input input::placeholder {
-  color: white !important;
-}
-
-.footer .footer-main a {
-  text-decoration: none;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 1.875rem;
-  line-height: 2.813rem;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  color: var(--color-white);
-}
-
-.footer .footer-main a:hover {
-  color: var(--color-primary-dark) !important;
-  -webkit-transition: 1s;
-  transition: 1s;
-}
-
-.footer .footer-social-icons {
-  list-style: none;
-  font-size: 1.25rem;
-}
-
-.footer .footer-social-icons li {
-  display: inline-block;
-  padding-top: 0.35rem;
-  margin-right: 2rem;
-  width: 2.5rem;
-  height: 2.5rem;
-  border-radius: 50%;
-  background: linear-gradient(45deg, var(--color-primary-dark), var(--color-primary-light), var(--color-primary-dark));
-  color: var(--color-dark);
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-
-.footer .footer-social-icons li:hover {
-  background: linear-gradient(45deg, var(--color-primary-dark), var(--color-dark), var(--color-primary-dark));
-  background-color: var(--color-dark);
-  color: var(--color-primary-light);
-  -webkit-transition: 1s;
-  transition: 1s;
-  -webkit-transform: scale(1.3, 1.3);
-          transform: scale(1.3, 1.3);
-}
-
-.footer .info-about-site {
-  font-size: 0.75rem;
-}
-
-.footer .footer-logo {
-  width: 12rem;
-}
-
-@media screen and (max-width: 1200px) {
-  .footer .my-5 {
-    margin-top: 0.5rem !important;
-    margin-bottom: 2rem !important;
-  }
-  .footer hr {
-    border: 1px solid rgba(242, 242, 242, 0.25);
-  }
-  .footer .join .footer-text {
-    font-size: 1.5rem;
-    margin: 0;
-  }
-  .footer .text-span span {
-    font-size: 1.2rem;
-    margin: 0;
-    padding: 0;
-  }
-  .footer .input input {
-    height: 2.125rem;
-    margin: 0;
-    padding: 0;
-    padding-left: 10px;
-  }
-  .footer .email-button {
-    width: 3.25rem;
-    height: 2.125rem;
-  }
-  .footer .email-button::after {
-    font-size: 1.45rem;
-  }
-  .footer .footer-main a {
-    font-size: 1.2rem;
-    margin: 0;
-  }
-  .footer .community {
-    font-size: 0.9rem;
-  }
-  .footer .footer-social-icons li {
-    padding-top: 3.5px;
-    width: 1.5rem;
-    height: 1.5rem;
-    font-size: 0.75rem;
-  }
-  .footer .info-about-site {
-    font-size: 0.5rem;
-  }
-  .footer .footer-logo {
-    width: 8rem;
-  }
-}
-
 #hikes {
   width: 100%;
   -webkit-box-sizing: border-box;
@@ -556,7 +361,7 @@ section#contact .contact-left .socials .icon-holder .ig:hover {
 }
 
 section#contact .contact-left .socials .icon-holder .yt {
-  background-color: #FF0000;
+  background-color: #2678c5;
   border-radius: 50%;
   height: 2.864rem;
   width: 2.864rem;
@@ -564,7 +369,7 @@ section#contact .contact-left .socials .icon-holder .yt {
 
 section#contact .contact-left .socials .icon-holder .yt:hover {
   background-color: var(--color-white);
-  color: #FF0000;
+  color: #2678c5;
 }
 
 section#contact .contact-left .socials .icon-holder .tw {
@@ -727,6 +532,152 @@ section#contact .contact-right form .sub-btn {
 
 section#contact .contact-right form .sub-btn:hover {
   background-color: var(--color-primary-light);
+}
+
+#about {
+  background: linear-gradient(135deg, var(--color-primary-light), var(--color-white));
+  -webkit-clip-path: polygon(0% 10%, 100% 0%, 100% 90%, 0% 100%);
+          clip-path: polygon(0% 10%, 100% 0%, 100% 90%, 0% 100%);
+}
+
+.center-vertical {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  min-height: 100vh;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.center-vertical .about-us-section {
+  width: 100%;
+  padding: calc(5%+1.8rem) 0rem;
+}
+
+.center-vertical .about-us-section .img-head {
+  position: relative;
+  overflow: hidden;
+  border-radius: 5px;
+}
+
+.center-vertical .about-us-section .img-head img {
+  width: 128%;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+.about-us-section .img-head:hover img {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+.about-us-section .img-head::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0.5;
+}
+
+.about-us-section .text-head {
+  font-size: 1.56rem;
+  color: var(--color-dark);
+}
+
+.about-us-section .break-small {
+  width: 5rem;
+  height: 0.2rem;
+  background-color: var(--color-primary-dark);
+}
+
+.about-us-section .text-para {
+  font-size: 1rem;
+  color: var(color-grey);
+}
+
+.about-us-section .box {
+  background-color: var(--color-primary);
+  color: var(--color-white);
+  text-align: center;
+  padding: 1.25rem 0rem;
+  position: relative;
+  overflow: hidden;
+  border-radius: 8%;
+  height: 9.5rem;
+}
+
+.about-us-section .box i {
+  font-size: 2.7rem;
+}
+
+.about-us-section .box h4 {
+  font-size: 0.9rem;
+}
+
+.about-us-section .box p {
+  font-size: 1.4rem;
+}
+
+.about-us-section .box::after,
+.about-us-section .box::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 6.25rem;
+  background-color: #fff5;
+  border-radius: 50%;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+.about-us-section .box::after {
+  left: -3.1rem;
+  top: -3.1rem;
+}
+
+.about-us-section .box::before {
+  right: -3.1rem;
+  bottom: -3.1rem;
+}
+
+.about-us-section .box:hover:after,
+.about-us-section .box:hover:before {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+.my-button {
+  width: 100%;
+  margin-left: 0 !important;
+  border-radius: 8px;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+@media screen and (max-width: 991px) {
+  .img-head {
+    -webkit-clip-path: polygon(0% 18%, 100% 0%, 100% 100%, 0% 100%);
+            clip-path: polygon(0% 18%, 100% 0%, 100% 100%, 0% 100%);
+  }
+  .my-button {
+    -webkit-transform: translateX(-223%);
+            transform: translateX(-223%);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .my-button {
+    -webkit-transform: translateX(-231%);
+            transform: translateX(-231%);
+  }
 }
 
 footer {
@@ -941,117 +892,5 @@ footer {
     display: -ms-flexbox;
     display: flex;
   }
-}
-
-.center-vertical {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-  min-height: 100vh;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.center-vertical .about-us-section {
-  width: 100%;
-  padding: calc(5%+1.8rem) 0rem;
-}
-
-.center-vertical .about-us-section .img-head {
-  position: relative;
-  overflow: hidden;
-}
-
-.center-vertical .about-us-section .img-head img {
-  width: 128%;
-  -webkit-transition: -webkit-transform 0.3s;
-  transition: -webkit-transform 0.3s;
-  transition: transform 0.3s;
-  transition: transform 0.3s, -webkit-transform 0.3s;
-}
-
-.about-us-section .img-head:hover img {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
-}
-
-.about-us-section .img-head::after {
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  opacity: 0.5;
-}
-
-.about-us-section .text-head {
-  font-size: 1.56rem;
-  color: var(--color-dark);
-}
-
-.about-us-section .break-small {
-  width: 5rem;
-  height: 0.2rem;
-  background-color: var(--color-primary-dark);
-}
-
-.about-us-section .text-para {
-  font-size: 1rem;
-  color: var(color-grey);
-}
-
-.about-us-section .box {
-  background-color: var(--color-primary);
-  color: var(--color-white);
-  text-align: center;
-  padding: 1.25rem 0rem;
-  position: relative;
-  overflow: hidden;
-  border-radius: 8%;
-}
-
-.about-us-section .box i {
-  font-size: 2.7rem;
-}
-
-.about-us-section .box h4 {
-  font-size: 0.9rem;
-}
-
-.about-us-section .box p {
-  font-size: 1.4rem;
-}
-
-.about-us-section .box::after,
-.about-us-section .box::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 6.25rem;
-  background-color: #fff5;
-  border-radius: 50%;
-  -webkit-transition: -webkit-transform 0.3s;
-  transition: -webkit-transform 0.3s;
-  transition: transform 0.3s;
-  transition: transform 0.3s, -webkit-transform 0.3s;
-}
-
-.about-us-section .box::after {
-  left: -3.1rem;
-  top: -3.1rem;
-}
-
-.about-us-section .box::before {
-  right: -3.1rem;
-  bottom: -3.1rem;
-}
-
-.about-us-section .box:hover:after,
-.about-us-section .box:hover:before {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
 }
 /*# sourceMappingURL=main.css.map */
