--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -40,6 +40,414 @@ body {
   background-color: var(--color-dark);
 }
 
+header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 40px 0;
+  -webkit-transition: 0.3s all ease-in-out;
+  transition: 0.3s all ease-in-out;
+  z-index: 99;
+}
+
+header .logo a {
+  font-weight: 600;
+  font-size: 1.875rem;
+  color: var(--color-white);
+  position: relative;
+  z-index: 101;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+header .side-menu {
+  color: var(--color-white);
+}
+
+header .side-menu .open-btn {
+  font-size: 3.2rem;
+  position: relative;
+  cursor: pointer;
+  -webkit-transition: all 0.3s linear;
+  transition: all 0.3s linear;
+}
+
+header .side-menu .close-btn {
+  display: none;
+  position: relative;
+  color: var(--color-dark);
+  font-size: 3.2rem;
+  cursor: pointer;
+  z-index: 999;
+  -webkit-transition: all 0.3s linear;
+  transition: all 0.3s linear;
+}
+
+header nav {
+  width: 100vw;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: white;
+  z-index: 100;
+  border-radius: 10px solid #f8f9fa;
+  -webkit-transition: all 0.3s linear;
+  transition: all 0.3s linear;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+header nav ul {
+  line-height: 1.5;
+}
+
+header nav ul a {
+  font-size: 2.5rem;
+  color: var(--color-dark);
+}
+
+header nav ul a:hover {
+  color: var(--color-primary-light);
+}
+
+.scrolled {
+  padding: 20px 0;
+  background-color: white;
+  -webkit-box-shadow: 0 5px 20px -5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 5px 20px -5px rgba(0, 0, 0, 0.1);
+  z-index: 100;
+}
+
+.scrolled .logo a {
+  color: var(--color-primary) !important;
+}
+
+.scrolled .side-menu {
+  color: var(--color-primary);
+}
+
+.hidden {
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  opacity: 0;
+}
+
+@media screen and (max-width: 990px) {
+  header nav ul a {
+    font-size: 2.2rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  nav ul a {
+    font-size: 1.8rem;
+  }
+}
+
+#hero {
+  height: 100vh;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  position: relative;
+  z-index: 5;
+}
+
+#hero .cover {
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(12, 35, 6, 0.4);
+  position: absolute;
+  top: 0;
+  z-index: -1;
+}
+
+#hero .hero-content {
+  padding: 10rem 0;
+  text-align: center;
+  color: var(--color-white);
+  line-height: 1.5;
+}
+
+#hero .hero-content p {
+  font-size: 42px;
+}
+
+#hero .hero-content h1 {
+  font-size: 76px;
+  color: #fff;
+  margin-bottom: 3rem;
+}
+
+#hero .hero-content a {
+  font-size: 20px;
+  padding: 0.7rem 1rem;
+  background: transparent;
+  background-color: var(--color-primary-light);
+  color: var(--color-white);
+  border: none;
+}
+
+@media screen and (max-width: 990px) {
+  .hero-content {
+    padding: 8.5rem 0 !important;
+    line-height: 1.2 !important;
+  }
+  .hero-content p {
+    font-size: 36px !important;
+  }
+  .hero-content h1 {
+    font-size: 64px !important;
+    margin-bottom: 1.5rem !important;
+  }
+  .hero-content a {
+    font-size: 16px !important;
+    padding: 0.5rem .8rem !important;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .hero-content {
+    padding: 8rem 0 !important;
+    line-height: 1 !important;
+  }
+  .hero-content p {
+    font-size: 28px !important;
+  }
+  .hero-content h1 {
+    font-size: 54px !important;
+    margin-bottom: 1rem !important;
+  }
+  .hero-content a {
+    font-size: 14px !important;
+    padding: 0.4rem .7rem !important;
+  }
+}
+
+footer {
+  background: var(--color-dark);
+}
+
+.footer {
+  width: 100%;
+}
+
+.footer .join h2 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 4.5rem;
+}
+
+.footer hr {
+  border: 3px solid rgba(242, 242, 242, 0.25);
+}
+
+.footer .text-span span {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.875rem;
+  line-height: 3.375rem;
+  letter-spacing: 0.05em;
+  text-transform: capitalize;
+  color: var(--color-white);
+}
+
+.footer .arrow-span {
+  width: 3rem;
+  font-size: 1.5rem;
+  height: 4rem;
+  cursor: pointer;
+  font-weight: lighter;
+  background: var(--color-primary-dark);
+  border: none;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.footer .arrow-span:hover {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  background: #12461a;
+}
+
+.footer .input {
+  width: 35%;
+  margin: 0 auto;
+}
+
+.footer .input input {
+  color: var(--color-dark);
+  padding-left: 1.875rem;
+  border: none;
+  background: var(--color-primary-light);
+  -webkit-box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  font-weight: 600;
+  line-height: 2.25rem;
+  letter-spacing: 0.05em;
+  text-transform: capitalize;
+}
+
+.footer .input input::-webkit-input-placeholder {
+  color: white !important;
+  font-size: large;
+}
+
+.footer .input input:-ms-input-placeholder {
+  color: white !important;
+  font-size: large;
+}
+
+.footer .input input::-ms-input-placeholder {
+  color: white !important;
+  font-size: large;
+}
+
+.footer .input input::placeholder {
+  color: white !important;
+  font-size: large;
+}
+
+.footer .footer-main a {
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.5rem;
+  line-height: 2.813rem;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  color: var(--color-white);
+}
+
+.footer .footer-main a:hover {
+  color: var(--color-primary-dark) !important;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.footer .footer-social-icons {
+  list-style: none;
+  font-size: 1.25rem;
+}
+
+.footer .footer-social-icons li {
+  display: inline-block;
+  padding-top: 0.35rem;
+  margin-right: 2rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  background: linear-gradient(45deg, var(--color-primary-dark), var(--color-primary-light), var(--color-primary-dark));
+  color: var(--color-dark);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.footer .footer-social-icons li:hover {
+  background: linear-gradient(45deg, var(--color-primary-dark), var(--color-dark), var(--color-primary-dark));
+  background-color: var(--color-dark);
+  color: var(--color-primary-light);
+  -webkit-transition: 1s;
+  transition: 1s;
+  -webkit-transform: scale(1.3, 1.3);
+          transform: scale(1.3, 1.3);
+}
+
+.footer .info-about-site {
+  font-size: 0.75rem;
+}
+
+.footer .footer-logo {
+  width: 12rem;
+}
+
+@media screen and (max-width: 1200px) {
+  .footer .my-5 {
+    margin-top: 0.5rem !important;
+    margin-bottom: 2rem !important;
+  }
+  .footer hr {
+    border: 1px solid rgba(242, 242, 242, 0.25);
+  }
+  .footer .join .footer-text {
+    font-size: 1.5rem;
+    margin: 0;
+  }
+  .footer .text-span span {
+    font-size: 1.2rem;
+    margin: 0;
+    padding: 0;
+  }
+  .footer .input {
+    width: 40%;
+  }
+  .footer .input input {
+    height: 2.125rem;
+    margin: 0;
+    padding: 0;
+    padding-left: 10px;
+    font-size: xx-small;
+  }
+  .footer .input input::-webkit-input-placeholder {
+    font-size: xx-small;
+  }
+  .footer .input input:-ms-input-placeholder {
+    font-size: xx-small;
+  }
+  .footer .input input::-ms-input-placeholder {
+    font-size: xx-small;
+  }
+  .footer .input input::placeholder {
+    font-size: xx-small;
+  }
+  .footer .arrow-span {
+    height: 2.125rem;
+    font-size: 1rem;
+    width: 100%;
+  }
+  .footer .footer-main a {
+    font-size: 1.2rem;
+    margin: 0;
+  }
+  .footer .community {
+    font-size: 0.9rem;
+  }
+  .footer .footer-social-icons li {
+    padding-top: 3.5px;
+    width: 1.5rem;
+    height: 1.5rem;
+    font-size: 0.75rem;
+  }
+  .footer .info-about-site {
+    font-size: 0.5rem;
+  }
+  .footer .footer-logo {
+    width: 8rem;
+  }
+}
+
+@media screen and (max-width: 326px) {
+  .footer .input {
+    width: 60%;
+  }
+  .footer .footer-social-icons {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 #hikes {
   width: 100%;
   -webkit-box-sizing: border-box;
@@ -191,8 +599,8 @@ body {
 
 section#contact {
   background: linear-gradient(135deg, var(--color-primary-dark), var(--color-primary-light));
-  -webkit-clip-path: polygon(0% 10%, 100% 0%, 100% 90%, 0% 100%);
-          clip-path: polygon(0% 10%, 100% 0%, 100% 90%, 0% 100%);
+  -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+          clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
 }
 
 section#contact .contact-left {
@@ -536,11 +944,11 @@ section#contact .contact-right form .sub-btn:hover {
 
 #about {
   background: linear-gradient(135deg, var(--color-primary-light), var(--color-white));
-  -webkit-clip-path: polygon(0% 10%, 100% 0%, 100% 90%, 0% 100%);
-          clip-path: polygon(0% 10%, 100% 0%, 100% 90%, 0% 100%);
+  -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+          clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
 }
 
-.center-vertical {
+#about .center-vertical {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -551,18 +959,18 @@ section#contact .contact-right form .sub-btn:hover {
           align-items: center;
 }
 
-.center-vertical .about-us-section {
+#about .center-vertical .about-us-section {
   width: 100%;
   padding: calc(5%+1.8rem) 0rem;
 }
 
-.center-vertical .about-us-section .img-head {
+#about .center-vertical .about-us-section .img-head {
   position: relative;
   overflow: hidden;
   border-radius: 5px;
 }
 
-.center-vertical .about-us-section .img-head img {
+#about .center-vertical .about-us-section .img-head img {
   width: 128%;
   -webkit-transition: -webkit-transform 0.3s;
   transition: -webkit-transform 0.3s;
@@ -570,12 +978,12 @@ section#contact .contact-right form .sub-btn:hover {
   transition: transform 0.3s, -webkit-transform 0.3s;
 }
 
-.about-us-section .img-head:hover img {
+#about .about-us-section .img-head:hover img {
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
 }
 
-.about-us-section .img-head::after {
+#about .about-us-section .img-head::after {
   content: "";
   width: 100%;
   height: 100%;
@@ -585,23 +993,23 @@ section#contact .contact-right form .sub-btn:hover {
   opacity: 0.5;
 }
 
-.about-us-section .text-head {
+#about .about-us-section .text-head {
   font-size: 1.56rem;
   color: var(--color-dark);
 }
 
-.about-us-section .break-small {
+#about .about-us-section .break-small {
   width: 5rem;
   height: 0.2rem;
   background-color: var(--color-primary-dark);
 }
 
-.about-us-section .text-para {
+#about .about-us-section .text-para {
   font-size: 1rem;
   color: var(color-grey);
 }
 
-.about-us-section .box {
+#about .about-us-section .box {
   background-color: var(--color-primary);
   color: var(--color-white);
   text-align: center;
@@ -612,20 +1020,20 @@ section#contact .contact-right form .sub-btn:hover {
   height: 9.5rem;
 }
 
-.about-us-section .box i {
+#about .about-us-section .box i {
   font-size: 2.7rem;
 }
 
-.about-us-section .box h4 {
+#about .about-us-section .box h4 {
   font-size: 0.9rem;
 }
 
-.about-us-section .box p {
+#about .about-us-section .box p {
   font-size: 1.4rem;
 }
 
-.about-us-section .box::after,
-.about-us-section .box::before {
+#about .about-us-section .box::after,
+#about .about-us-section .box::before {
   content: "";
   position: absolute;
   width: 100%;
@@ -638,259 +1046,53 @@ section#contact .contact-right form .sub-btn:hover {
   transition: transform 0.3s, -webkit-transform 0.3s;
 }
 
-.about-us-section .box::after {
+#about .about-us-section .box::after {
   left: -3.1rem;
   top: -3.1rem;
 }
 
-.about-us-section .box::before {
+#about .about-us-section .box::before {
   right: -3.1rem;
   bottom: -3.1rem;
 }
 
-.about-us-section .box:hover:after,
-.about-us-section .box:hover:before {
+#about .about-us-section .box:hover:after,
+#about .about-us-section .box:hover:before {
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
 }
 
-.my-button {
+#about .my-button {
   width: 100%;
   margin-left: 0 !important;
   border-radius: 8px;
-  -webkit-transition: all .3s ease;
-  transition: all .3s ease;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 @media screen and (max-width: 991px) {
-  .img-head {
+  #about .img-head {
     -webkit-clip-path: polygon(0% 18%, 100% 0%, 100% 100%, 0% 100%);
             clip-path: polygon(0% 18%, 100% 0%, 100% 100%, 0% 100%);
   }
-  .my-button {
+  #about .my-button {
     -webkit-transform: translateX(-223%);
             transform: translateX(-223%);
   }
 }
 
 @media screen and (max-width: 768px) {
-  .my-button {
+  #about .my-button {
     -webkit-transform: translateX(-231%);
             transform: translateX(-231%);
   }
 }
 
-footer {
-  background: var(--color-dark);
+#other {
+  background-color: var(--color-primary-light);
 }
 
-.footer {
-  width: 100%;
-}
-
-.footer .join h2 {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 3rem;
-  line-height: 4.5rem;
-}
-
-.footer hr {
-  border: 3px solid rgba(242, 242, 242, 0.25);
-}
-
-.footer .text-span span {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 2.25rem;
-  line-height: 3.375rem;
-  letter-spacing: 0.05em;
-  text-transform: capitalize;
-  color: var(--color-white);
-}
-
-.footer .arrow-span {
-  width: 3rem;
-  font-size: 1.5rem;
-  height: 4rem;
-  cursor: pointer;
-  font-weight: lighter;
-  background: var(--color-primary-dark);
-  border: none;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-
-.footer .arrow-span:hover {
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  background: #12461a;
-}
-
-.footer .input {
-  width: 35%;
-  margin: 0 auto;
-}
-
-.footer .input input {
-  color: var(--color-dark);
-  padding-left: 1.875rem;
-  border: none;
-  background: var(--color-primary-light);
-  -webkit-box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  font-weight: 600;
-  line-height: 2.25rem;
-  letter-spacing: 0.05em;
-  text-transform: capitalize;
-}
-
-.footer .input input::-webkit-input-placeholder {
-  color: white !important;
-  font-size: large;
-}
-
-.footer .input input:-ms-input-placeholder {
-  color: white !important;
-  font-size: large;
-}
-
-.footer .input input::-ms-input-placeholder {
-  color: white !important;
-  font-size: large;
-}
-
-.footer .input input::placeholder {
-  color: white !important;
-  font-size: large;
-}
-
-.footer .footer-main a {
-  text-decoration: none;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 1.875rem;
-  line-height: 2.813rem;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  color: var(--color-white);
-}
-
-.footer .footer-main a:hover {
-  color: var(--color-primary-dark) !important;
-  -webkit-transition: 1s;
-  transition: 1s;
-}
-
-.footer .footer-social-icons {
-  list-style: none;
-  font-size: 1.25rem;
-}
-
-.footer .footer-social-icons li {
-  display: inline-block;
-  padding-top: 0.35rem;
-  margin-right: 2rem;
-  width: 2.5rem;
-  height: 2.5rem;
-  border-radius: 50%;
-  background: linear-gradient(45deg, var(--color-primary-dark), var(--color-primary-light), var(--color-primary-dark));
-  color: var(--color-dark);
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-
-.footer .footer-social-icons li:hover {
-  background: linear-gradient(45deg, var(--color-primary-dark), var(--color-dark), var(--color-primary-dark));
-  background-color: var(--color-dark);
-  color: var(--color-primary-light);
-  -webkit-transition: 1s;
-  transition: 1s;
-  -webkit-transform: scale(1.3, 1.3);
-          transform: scale(1.3, 1.3);
-}
-
-.footer .info-about-site {
-  font-size: 0.75rem;
-}
-
-.footer .footer-logo {
-  width: 12rem;
-}
-
-@media screen and (max-width: 1200px) {
-  .footer .my-5 {
-    margin-top: 0.5rem !important;
-    margin-bottom: 2rem !important;
-  }
-  .footer hr {
-    border: 1px solid rgba(242, 242, 242, 0.25);
-  }
-  .footer .join .footer-text {
-    font-size: 1.5rem;
-    margin: 0;
-  }
-  .footer .text-span span {
-    font-size: 1.2rem;
-    margin: 0;
-    padding: 0;
-  }
-  .footer .input {
-    width: 40%;
-  }
-  .footer .input input {
-    height: 2.125rem;
-    margin: 0;
-    padding: 0;
-    padding-left: 10px;
-    font-size: xx-small;
-  }
-  .footer .input input::-webkit-input-placeholder {
-    font-size: xx-small;
-  }
-  .footer .input input:-ms-input-placeholder {
-    font-size: xx-small;
-  }
-  .footer .input input::-ms-input-placeholder {
-    font-size: xx-small;
-  }
-  .footer .input input::placeholder {
-    font-size: xx-small;
-  }
-  .footer .arrow-span {
-    height: 2.125rem;
-    font-size: 1rem;
-    width: 100%;
-  }
-  .footer .footer-main a {
-    font-size: 1.2rem;
-    margin: 0;
-  }
-  .footer .community {
-    font-size: 0.9rem;
-  }
-  .footer .footer-social-icons li {
-    padding-top: 3.5px;
-    width: 1.5rem;
-    height: 1.5rem;
-    font-size: 0.75rem;
-  }
-  .footer .info-about-site {
-    font-size: 0.5rem;
-  }
-  .footer .footer-logo {
-    width: 8rem;
-  }
-}
-
-@media screen and (max-width: 326px) {
-  .footer .input {
-    width: 60%;
-  }
-  .footer .footer-social-icons {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
+#other .other-header h1 {
+  color: var(--color-white) !important;
 }
 /*# sourceMappingURL=main.css.map */
