--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,8 +1,10 @@
 @import "./partials/colors";
 @import "./partials/fonts";
 @import "./partials/reset";
-
+@import "./partials/header";
+@import "./partials/hero";
+@import "./partials/footer";
 @import "./partials/hikes";
 @import "./partials/contact";
 @import "./partials/about";
-@import "./partials/footer";
+@import "./partials/about-readmore";
