--- a/assets/scss/partials/_contact.scss
+++ b/assets/scss/partials/_contact.scss
@@ -106,7 +106,7 @@ section#contact {
             }
         }
 
-        .active {
+        .active-block {
             opacity: 1 !important;
             height: 45rem;
         }
