--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -705,7 +705,7 @@ section#contact .contact-left .map iframe {
   opacity: 0;
 }
 
-section#contact .contact-left .active {
+section#contact .contact-left .active-block {
   opacity: 1 !important;
   height: 45rem;
 }
@@ -1094,5 +1094,180 @@ section#contact .contact-right form .sub-btn:hover {
 
 #other .other-header h1 {
   color: var(--color-white) !important;
+}
+
+/* Slideshow container */
+#slider {
+  background-color: var(--color-white);
+}
+
+.slideshow-container {
+  position: relative;
+  margin: auto;
+  font-family: var(--font-main);
+  background-color: var(--color-white);
+  /* On hover, add a black background color with a little bit see-through */
+}
+
+.slideshow-container .mySlides {
+  display: none;
+}
+
+.slideshow-container .mySlides .side {
+  /* unsplash:PQeoQdkU9jQ */
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(55, 201, 85, 0.5)), to(rgba(55, 201, 85, 0.5)));
+  background: linear-gradient(0deg, rgba(55, 201, 85, 0.5), rgba(55, 201, 85, 0.5));
+}
+
+.slideshow-container .mySlides .numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+.slideshow-container .mySlides p {
+  color: var(--color-dark);
+  /* Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. */
+  padding: 0 !important;
+  margin: 0 !important;
+  font-weight: 500;
+  font-size: 24px;
+  letter-spacing: 0.05em;
+  text-transform: capitalize;
+  text-align: justify;
+}
+
+.slideshow-container .mySlides p .hiker-name {
+  color: var(--color-primary-dark);
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.slideshow-container .mySlides .img-holder {
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(55, 201, 85, 0.5)), to(rgba(55, 201, 85, 0.5))), url(.jpg);
+  background: linear-gradient(0deg, rgba(55, 201, 85, 0.5), rgba(55, 201, 85, 0.5)), url(.jpg);
+  height: 566px;
+  width: 271px;
+  overflow: hidden;
+}
+
+.slideshow-container .mySlides .slide-img {
+  height: 100%;
+  opacity: 1;
+}
+
+.slideshow-container .mySlides .quotes {
+  position: absolute;
+  left: 41.3%;
+  right: 53.34%;
+  top: 0;
+  bottom: 60.29%;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 144px;
+  line-height: 216px;
+  /* identical to box height */
+  text-align: center;
+  letter-spacing: 0.05em;
+  text-transform: capitalize;
+  color: rgba(33, 72, 44, 0.8);
+}
+
+.slideshow-container .mySlides .slide-img-side {
+  height: 100%;
+  opacity: .3;
+}
+
+.slideshow-container .previ,
+.slideshow-container .nexti {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  -webkit-transition: 0.6s ease;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.slideshow-container .nexti {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.slideshow-container .previ:hover,
+.slideshow-container .nexti:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.slideshow-container .fadee {
+  -webkit-animation-name: fade;
+          animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+          animation-duration: 1.5s;
+}
+
+/* Hide the images by default */
+/* Next & previous buttons */
+/* Position the "next button" to the right */
+/* Caption text */
+/* Number text (1/3 etc) */
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  -webkit-transition: background-color 0.6s ease;
+  transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+@-webkit-keyframes fade {
+  from {
+    opacity: .4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fade {
+  from {
+    opacity: .4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@media screen and (max-width: 1394px) {
+  .slideshow-container {
+    max-width: 1000px;
+  }
+  .img-holder-main {
+    display: none;
+  }
+  p {
+    font-size: 16px !important;
+  }
 }
 /*# sourceMappingURL=main.css.map */
