--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -155,7 +155,6 @@ header nav ul a:hover {
 }
 
 #hero {
-  height: 100vh;
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
@@ -164,7 +163,7 @@ header nav ul a:hover {
 }
 
 #hero .cover {
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   background-color: rgba(12, 35, 6, 0.4);
   position: absolute;
@@ -173,7 +172,7 @@ header nav ul a:hover {
 }
 
 #hero .hero-content {
-  padding: 10rem 0;
+  padding: 10.5rem 0;
   text-align: center;
   color: var(--color-white);
   line-height: 1.5;
@@ -1149,36 +1148,38 @@ section#contact .contact-right form .sub-btn:hover {
   background: -webkit-gradient(linear, left bottom, left top, from(rgba(55, 201, 85, 0.5)), to(rgba(55, 201, 85, 0.5))), url(.jpg);
   background: linear-gradient(0deg, rgba(55, 201, 85, 0.5), rgba(55, 201, 85, 0.5)), url(.jpg);
   height: 566px;
-  width: 271px;
+  width: 18%;
   overflow: hidden;
 }
 
+.slideshow-container .mySlides .img-holder img {
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
 .slideshow-container .mySlides .slide-img {
+  width: 100%;
   height: 100%;
   opacity: 1;
 }
 
 .slideshow-container .mySlides .quotes {
-  position: absolute;
-  left: 41.3%;
-  right: 53.34%;
-  top: 0;
-  bottom: 60.29%;
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-style: normal;
   font-weight: 700;
-  font-size: 144px;
-  line-height: 216px;
+  font-size: 89px;
   /* identical to box height */
   text-align: center;
   letter-spacing: 0.05em;
   text-transform: capitalize;
+  height: 5rem;
   color: rgba(33, 72, 44, 0.8);
 }
 
 .slideshow-container .mySlides .slide-img-side {
   height: 100%;
-  opacity: .3;
+  opacity: 0.3;
 }
 
 .slideshow-container .previ,
@@ -1244,7 +1245,7 @@ section#contact .contact-right form .sub-btn:hover {
 /* Fading animation */
 @-webkit-keyframes fade {
   from {
-    opacity: .4;
+    opacity: 0.4;
   }
   to {
     opacity: 1;
@@ -1252,7 +1253,7 @@ section#contact .contact-right form .sub-btn:hover {
 }
 @keyframes fade {
   from {
-    opacity: .4;
+    opacity: 0.4;
   }
   to {
     opacity: 1;
@@ -1263,11 +1264,20 @@ section#contact .contact-right form .sub-btn:hover {
   .slideshow-container {
     max-width: 1000px;
   }
-  .img-holder-main {
-    display: none;
-  }
   p {
     font-size: 16px !important;
+  }
+}
+
+@media screen and (max-width: 990px) {
+  .side {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .img-holder {
+    width: 60% !important;
   }
 }
 /*# sourceMappingURL=main.css.map */
