--- a/assets/scss/partials/_slider.scss
+++ b/assets/scss/partials/_slider.scss
@@ -1,187 +1,193 @@
 /* Slideshow container */
 #slider {
-    background-color: var(--color-white);
-
+  background-color: var(--color-white);
 }
 
 .slideshow-container {
-    position: relative;
-    margin: auto;
-    font-family: var(--font-main);
-    background-color: var(--color-white);
+  position: relative;
+  margin: auto;
+  font-family: var(--font-main);
+  background-color: var(--color-white);
 
-    .mySlides {
-        display: none;
+  .mySlides {
+    display: none;
 
-        .side {
-            /* unsplash:PQeoQdkU9jQ */
+    .side {
+      /* unsplash:PQeoQdkU9jQ */
 
-            // position: absolute;
-            // left: 0%;
-            // right: 84.42%;
-            // top: 0%;
-            // bottom: 9%;
-            background: linear-gradient(0deg, rgba(55, 201, 85, 0.5), rgba(55, 201, 85, 0.5));
-        }
-
-        .numbertext {
-            color: #f2f2f2;
-            font-size: 12px;
-            padding: 8px 12px;
-            position: absolute;
-            top: 0;
-        }
-
-        p {
-            color: var(--color-dark);
-            /* Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. */
-            padding: 0 !important;
-            margin: 0 !important;
-
-            font-weight: 500;
-            font-size: 24px;
-            // line-height: 36px;
-            letter-spacing: 0.05em;
-            text-transform: capitalize;
-            text-align: justify;
-
-            .hiker-name {
-                color: var(--color-primary-dark);
-                font-size: 2rem;
-                font-weight: bold;
-            }
-        }
-
-        .img-holder {
-            background: linear-gradient(0deg, rgba(55, 201, 85, 0.5), rgba(55, 201, 85, 0.5)), url(.jpg);
-            height: 566px;
-            width: 271px;
-            overflow: hidden;
-        }
-
-        .slide-img {
-            height: 100%;
-            opacity: 1;
-        }
-
-        .quotes {
-
-            position: absolute;
-            left: 41.3%;
-            right: 53.34%;
-            top: 0;
-            bottom: 60.29%;
-
-            font-family: 'Poppins';
-            font-style: normal;
-            font-weight: 700;
-            font-size: 144px;
-            line-height: 216px;
-            /* identical to box height */
-            text-align: center;
-            letter-spacing: 0.05em;
-            text-transform: capitalize;
-
-            color: rgba(33, 72, 44, 0.8);
-
-
-        }
-
-        .slide-img-side {
-            height: 100%;
-            opacity: .3;
-        }
-
+      // position: absolute;
+      // left: 0%;
+      // right: 84.42%;
+      // top: 0%;
+      // bottom: 9%;
+      background: linear-gradient(
+        0deg,
+        rgba(55, 201, 85, 0.5),
+        rgba(55, 201, 85, 0.5)
+      );
     }
 
-    .previ,
-    .nexti {
-        cursor: pointer;
-        position: absolute;
-        top: 50%;
-        width: auto;
-        margin-top: -22px;
-        padding: 16px;
-        color: white;
+    .numbertext {
+      color: #f2f2f2;
+      font-size: 12px;
+      padding: 8px 12px;
+      position: absolute;
+      top: 0;
+    }
+
+    p {
+      color: var(--color-dark);
+      /* Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. */
+      padding: 0 !important;
+      margin: 0 !important;
+
+      font-weight: 500;
+      font-size: 24px;
+      // line-height: 36px;
+      letter-spacing: 0.05em;
+      text-transform: capitalize;
+      text-align: justify;
+
+      .hiker-name {
+        color: var(--color-primary-dark);
+        font-size: 2rem;
         font-weight: bold;
-        font-size: 18px;
-        transition: 0.6s ease;
-        border-radius: 0 3px 3px 0;
-        user-select: none;
+      }
     }
 
-    .nexti {
-        right: 0;
-        border-radius: 3px 0 0 3px;
+    .img-holder {
+      background: linear-gradient(
+          0deg,
+          rgba(55, 201, 85, 0.5),
+          rgba(55, 201, 85, 0.5)
+        ),
+        url(.jpg);
+      height: 566px;
+      width: 18%;
+      overflow: hidden;
 
+      img {
+        background-position: center;
+        background-size: cover;
+        background-attachment: fixed;
+      }
     }
 
-    /* On hover, add a black background color with a little bit see-through */
-    .previ:hover,
-    .nexti:hover {
-        background-color: rgba(0, 0, 0, 0.8);
+    .slide-img {
+      width: 100%;
+      height: 100%;
+      opacity: 1;
     }
 
-    .fadee {
-        animation-name: fade;
-        animation-duration: 1.5s;
+    .quotes {
+      font-family: "Poppins";
+      font-style: normal;
+      font-weight: 700;
+      font-size: 89px;
+      /* identical to box height */
+      text-align: center;
+      letter-spacing: 0.05em;
+      text-transform: capitalize;
+      height: 5rem;
+      color: rgba(33, 72, 44, 0.8);
     }
+
+    .slide-img-side {
+      height: 100%;
+      opacity: 0.3;
+    }
+  }
+
+  .previ,
+  .nexti {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+
+  .nexti {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+
+  /* On hover, add a black background color with a little bit see-through */
+  .previ:hover,
+  .nexti:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+
+  .fadee {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
 }
 
 /* Hide the images by default */
 
-
 /* Next & previous buttons */
 
-
 /* Position the "next button" to the right */
-
 
 /* Caption text */
 
 /* Number text (1/3 etc) */
 
-
 /* The dots/bullets/indicators */
 .dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
 }
 
 .active,
 .dot:hover {
-    background-color: #717171;
+  background-color: #717171;
 }
 
 /* Fading animation */
 
-
 @keyframes fade {
-    from {
-        opacity: .4
-    }
+  from {
+    opacity: 0.4;
+  }
 
-    to {
-        opacity: 1
-    }
+  to {
+    opacity: 1;
+  }
 }
 
 @media screen and (max-width: 1394px) {
-    .slideshow-container {
-        max-width: 1000px;
-    }
+  .slideshow-container {
+    max-width: 1000px;
+  }
 
-    .img-holder-main {
-        display: none;
-    }
+  p {
+    font-size: 16px !important;
+  }
+}
 
-    p {
-        font-size: 16px !important;
-    }
+@media screen and (max-width: 990px) {
+  .side {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .img-holder {
+    width: 60% !important;
+  }
 }
